--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
   ],
   "dependencies": {
     "angular": "~1.2.x",
-    "intro.js": "git@github.com:/RallySoftware/intro.js#0.9.2"
+    "intro.js": "git://github.com/RallySoftware/intro.js#0.9.2"
   },
   "devDependencies": {}
 }
